--- a/ArjunaJTS/interop/resource/pom.xml
+++ b/ArjunaJTS/interop/resource/pom.xml
@@ -14,12 +14,12 @@
   <name>dummy-resources</name>
 
   <dependencies>
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-web-api</artifactId>
-      <version>6.0</version>
+  <dependency>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-web-api</artifactId>
+      <version>10.0.0</version>
       <scope>provided</scope>
-    </dependency>
+  </dependency>
   </dependencies>
 
   <build>
