[JBTM-3463] split up each service (hotel, flight and trip) so that they each run in their own JVMs

--- a/rts/at/pom.xml
+++ b/rts/at/pom.xml
@@ -74,5 +74,6 @@
     <module>recovery</module>
     <module>jta-service</module>
     <module>undertow</module>
+    <module>sra-examples</module>
   </modules>
 </project>
