JBTM-3779: Move out the test artifacts in narayana-bom

--- a/jta-1_2-standalone/pom.xml
+++ b/jta-1_2-standalone/pom.xml
@@ -53,6 +53,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+          <groupId>org.jboss.logging</groupId>
+          <artifactId>jboss-logging</artifactId>
+          <scope>compile</scope>
+      </dependency>
         <!-- Standalone CDI container -->
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
