--- a/agroal/pom.xml
+++ b/agroal/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
