--- a/atsintegration/pom.xml
+++ b/atsintegration/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>narayana-quickstarts-all</artifactId>
     <groupId>org.jboss.narayana.quickstart</groupId>
-    <version>6.0.2.Final-SNAPSHOT</version>
+    <version>7.0.0.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart</groupId>
   <artifactId>application-server-integration</artifactId>
