--- a/XTS/raw-xts-api-demo/war/pom.xml
+++ b/XTS/raw-xts-api-demo/war/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
     <artifactId>xts-demo-all</artifactId>
-    <version>7.0.0.Final</version>
+    <version>7.0.1.Final-SNAPSHOT</version>
   </parent>
   <artifactId>xts-demo-war</artifactId>
   <packaging>war</packaging>
